--- a/je-debute/index.html
+++ b/je-debute/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
+    <h2>bloup</h2>
     <button id="changeColor"></button>
     
     <script src="popup.js"></script>
