Feat : Css Popup WIP

--- a/src/turtle_pet/src/popup.html
+++ b/src/turtle_pet/src/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="popup.css">
     <title>Document</title>
 </head>
-<body>
+<body class="buttonChange">
     <button id="display">coucou</button>
     <button id="giveFood">donne moi à manger</button>
     <button id="cleanBehind">nettoie derrière moi</button>
