Fix : change CSS => add title pop up & changement color

--- a/src/turtle_pet/src/popup.html
+++ b/src/turtle_pet/src/popup.html
@@ -7,10 +7,11 @@
     <title>Document</title>
 </head>
 <body class="buttonChange">
-    <button id="display">coucou</button>
-    <button id="giveFood">donne moi à manger</button>
-    <button id="cleanBehind">nettoie derrière moi</button>
-    <button id="playWith">joue avec moi</button>
+    <h1>Espace Catalina :)</h1>
+    <button id="display">Coucou</button>
+    <button id="giveFood">Donne moi à manger</button>
+    <button id="cleanBehind">Nettoie derrière moi</button>
+    <button id="playWith">Joue avec moi</button>
     <script src="popup.js"></script>
 </body>
 </html>
